--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/hmsk/jest-matcher-vue-test-utils/issues"
   },
-  "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme"
+  "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
+  "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "jest": "^23.5.0",
+    "rollup": "^0.64.1",
+    "rollup-plugin-typescript2": "^0.16.1",
+    "typescript": "^3.0.1"
+  }
 }
