--- a/package.json
+++ b/package.json
@@ -28,6 +28,26 @@
     "jest": "^23.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-typescript2": "^0.16.1",
-    "typescript": "^3.0.1"
+    "ts-jest": "^23.1.3",
+    "typescript": "^3.0.1",
+    "vue-jest": "^2.6.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue",
+      "ts"
+    ],
+    "transform": {
+      "^.+\\.vue$": "vue-jest",
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "testMatch": [
+      "**/test/**/*.test.ts"
+    ],
+    "testURL": "http://localhost/"
   }
 }
