--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "rollup-plugin-typescript2": "^0.16.1",
     "ts-jest": "^23.1.3",
     "typescript": "^3.0.1",
-    "vue-jest": "^2.6.0"
+    "vue": "^2.5.17",
+    "vue-jest": "^2.6.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "jest": {
     "moduleFileExtensions": [
