--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "@vue/test-utils": "^1.0.0-beta.24",
     "jest": "^23.5.0",
     "rollup": "^0.64.1",
