--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,15 @@
     "types": [
       "node",
       "jest"
-    ]
+    ],
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "test/**/*.ts",
+    "test/fixtures/*.vue"
   ],
   "exclude": [
     "node_modules"
