--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-matcher-vue-test-utils",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Jest matchers to test Vue components easily",
   "main": "index.js",
   "scripts": {
