--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@vue/test-utils": "^1.0.0-beta.24",
     "jest": "^23.5.0",
     "rollup": "^0.64.1",
+    "rollup-plugin-commonjs": "^9.1.5",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.16.1",
     "ts-jest": "^23.1.3",
     "typescript": "^3.0.1",
