--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "vue-jest": "^2.6.0",
     "vue-template-compiler": "^2.5.17"
   },
+  "peerDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "jest": "^22.0.0 || ^23.0.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
