--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "test:watch": "jest -o"
+    "test:watch": "jest --watch -o"
   },
   "repository": {
     "type": "git",
