--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^23.3.1",
     "@vue/test-utils": "^1.0.0-beta.24",
     "jest": "^23.5.0",
+    "lodash.isequal": "^4.5.0",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-json": "^3.0.0",
