--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^23.5.0",
     "lodash.isequal": "^4.5.0",
     "rollup": "^0.64.1",
+    "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
