--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-beta.3",
   "description": "Jest matchers to test Vue components easily",
   "main": "index.js",
+  "types": "jest-matcher-vue-test-utils.d.ts",
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
