--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "jest-matcher-vue-test-utils",
   "version": "1.0.0-beta.13",
   "description": "Jest matchers to test Vue components easily",
-  "main": "index.js",
-  "types": "jest-matcher-vue-test-utils.d.ts",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
