--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
   },
   "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
   "devDependencies": {
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^23.3.2",
     "@vue/test-utils": "^1.0.0-beta.24",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "rollup": "^0.64.1",
     "rollup-plugin-cleanup": "^3.0.0",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.16.1",
-    "ts-jest": "^23.1.3",
+    "ts-jest": "^23.10.2",
     "typescript": "^3.0.1",
     "vue": "^2.5.17",
     "vue-jest": "^2.6.0",
@@ -49,10 +49,15 @@
     "jest": "^22.0.0 || ^23.0.0"
   },
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "./test/tsconfig.json"
+      }
+    },
     "moduleFileExtensions": [
       "js",
-      "vue",
-      "ts"
+      "ts",
+      "vue"
     ],
     "transform": {
       "^.+\\.vue$": "vue-jest",
@@ -64,6 +69,7 @@
     "testMatch": [
       "**/test/**/*.test.ts"
     ],
-    "testURL": "http://localhost/"
+    "testURL": "http://localhost/",
+    "preset": "ts-jest"
   }
 }
