--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
   "devDependencies": {
-    "@types/jest": "^23.3.2",
+    "@types/jest": "23.3.11",
     "@vue/test-utils": "^1.0.0-beta.24",
     "jest": "^23.6.0",
     "rollup": "^0.64.1",
@@ -38,7 +38,7 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.16.1",
-    "ts-jest": "^23.10.2",
+    "ts-jest": "23.10.5",
     "typescript": "^3.0.1",
     "vue": "^2.5.17",
     "vue-jest": "^2.6.0",
