--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
   "devDependencies": {
     "@types/jest": "23.3.11",
-    "@vue/test-utils": "^1.0.0-beta.24",
+    "@vue/test-utils": "1.0.0-beta.28",
     "jest": "^23.6.0",
     "rollup": "^0.64.1",
     "rollup-plugin-cleanup": "^3.0.0",
@@ -40,9 +40,9 @@
     "rollup-plugin-typescript2": "^0.16.1",
     "ts-jest": "23.10.5",
     "typescript": "^3.0.1",
-    "vue": "^2.5.17",
+    "vue": "2.5.21",
     "vue-jest": "^2.6.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "2.5.21"
   },
   "peerDependencies": {
     "@vue/test-utils": "^1.0.0-beta.20",
