--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.16.1",
     "ts-jest": "23.10.5",
-    "typescript": "^3.0.1",
+    "typescript": "3.2.2",
     "vue": "2.5.21",
     "vue-jest": "^2.6.0",
     "vue-template-compiler": "2.5.21"
