Update around Rollup

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@types/jest": "23.3.11",
     "@vue/test-utils": "1.0.0-beta.28",
     "jest": "^23.6.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-cleanup": "^3.0.0",
-    "rollup-plugin-commonjs": "^9.1.5",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-typescript2": "^0.16.1",
+    "rollup": "1.0.2",
+    "rollup-plugin-cleanup": "3.1.0",
+    "rollup-plugin-commonjs": "9.2.0",
+    "rollup-plugin-json": "3.1.0",
+    "rollup-plugin-node-resolve": "4.0.0",
+    "rollup-plugin-typescript2": "0.18.1",
     "ts-jest": "23.10.5",
     "typescript": "3.2.2",
     "vue": "2.5.21",
