--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ts-jest": "23.10.5",
     "typescript": "3.2.2",
     "vue": "2.5.21",
-    "vue-jest": "^2.6.0",
+    "vue-jest": "3.0.2",
     "vue-template-compiler": "2.5.21"
   },
   "peerDependencies": {
