--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/jest": "23.3.11",
     "@vue/test-utils": "1.0.0-beta.28",
-    "jest": "^23.6.0",
+    "jest": "23.6.0",
     "rollup": "1.0.2",
     "rollup-plugin-cleanup": "3.1.0",
     "rollup-plugin-commonjs": "9.2.0",
