--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "typescript": "3.3.3",
     "vue": "2.6.4",
     "vue-jest": "3.0.3",
-    "vue-template-compiler": "2.6.4"
+    "vue-template-compiler": "2.6.4",
+    "vuex": "3.1.0"
   },
   "peerDependencies": {
     "@vue/test-utils": "^1.0.0-beta.20",
