--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "test:watch": "jest --watch -o"
+    "test:watch": "jest --watch -o",
+    "release:major": "standard-version --release-as major",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:beta": "standard-version --release-as maintenance --prerelease beta"
   },
   "repository": {
     "type": "git",
@@ -38,6 +42,7 @@
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-typescript2": "0.19.2",
+    "standard-version": "latest",
     "ts-jest": "23.10.5",
     "typescript": "3.3.3",
     "vue": "2.6.4",
