--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
-    "test:watch": "jest --watch -o",
-    "release:major": "standard-version --release-as major",
-    "release:minor": "standard-version --release-as minor",
-    "release:patch": "standard-version --release-as patch",
-    "release:beta": "standard-version --release-as maintenance --prerelease beta"
+    "test:watch": "jest --watch -o"
   },
   "repository": {
     "type": "git",
@@ -42,7 +38,6 @@
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-typescript2": "0.19.2",
-    "standard-version": "latest",
     "ts-jest": "23.10.5",
     "typescript": "3.3.3",
     "vue": "2.6.6",
