--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "peerDependencies": {
     "@vue/test-utils": "^1.0.0-beta.20",
-    "jest": "^22.0.0 || ^23.0.0"
+    "jest": ">=22.0 <25"
   },
   "jest": {
     "globals": {
