Ignore patch version of rollup*

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,10 @@
   ],
   "assignees": [
     "hmsk"
-  ]
+  ],
+  "packageRules": [{
+    "packagePatterns": ["^rollup"],
+    "updateTypes": ["patch"],
+    "enabled": false
+  }]
 }
