Skip babel to preprocess with vue-jest

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "globals": {
       "ts-jest": {
         "tsConfig": "./test/tsconfig.json"
+      },
+      "vue-jest": {
+        "babelConfig": false
       }
     },
     "moduleFileExtensions": [
