--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/jest": "24.0.15",
     "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
     "jest": "24.8.0",
     "rollup": "1.15.6",
     "rollup-plugin-cleanup": "3.1.1",
