--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "url": "https://github.com/hmsk/jest-matcher-vue-test-utils/issues"
   },
   "homepage": "https://github.com/hmsk/jest-matcher-vue-test-utils#readme",
+  "dependencies": {
+    "jest-diff": ">=22.0"
+  },
   "devDependencies": {
     "@types/jest": "24.0.18",
     "@vue/test-utils": "1.0.0-beta.29",
