--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-matcher-vue-test-utils",
-  "version": "2.0.0-1",
+  "version": "2.0.0",
   "description": "Jest matchers to test Vue components easily",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
