--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/test-utils": "1.0.0-beta.33",
     "babel-core": "7.0.0-bridge.0",
     "jest": "25.3.0",
+    "jest-util": "25.3.0",
     "rollup": "2.6.1",
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "10.1.0",
