Say tsconfig instead of tsConfig in jest's config

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "jest": {
     "globals": {
       "ts-jest": {
-        "tsConfig": "./test/tsconfig.json"
+        "tsconfig": "./test/tsconfig.json"
       },
       "vue-jest": {
         "babelConfig": false
