--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "vuex": "3.5.1"
   },
   "peerDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/test-utils": "^1.0.0",
     "jest": ">=23.0"
   },
   "jest": {
